src/test/error/async2.lns
class Test extend LnsThread {
   pub fn start() {
      _lune_control run_async_pipe;
   }
}
